# rust-arb-bot

./: .gitmodules  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
.github/workflows/: ci.yml
config/: default.toml
custom-quoter-contracts/src/: CustomQuoter.sol
src/: arbitrage.rs  helpers.rs  lib.rs  main.rs  settings.rs
src/adapters/: bybit.rs  gateio.rs  hyperswap.rs  mod.rs
src/benches/: dex_quotes.rs
src/helpers/: abi.rs  mod.rs  revm.rs
