cargo-features = ["edition2024"]

[package]
name = "rust-arb-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = "1.0.23"
anyhow = "1.0.98"
config = "0.15.13"
dotenvy = "0.15.7"
env_logger = "0.11.8"
serde = "1.0.219"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "sync"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
serde_json = "1.0.132"
futures-util = "0.3.31"
log = "0.4.22"
revm = { version = "27.1.0", features = ["alloydb"] }
cacache = "13.1.0"

